feat: 🎸 add get index, get cv and fix upload swagger
