# src/swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "version": "1.0.0",
     "title": "cv-index-search-api",
-    "description": "An search engine on CV with ElasticSearch and TypeScript",
+    "description": "An search engine on CV with Elasticsearch and TypeScript",
     "license": {
       "name": "MIT",
       "url": "https://opensource.org/licenses/MIT"
@@ -17,6 +17,35 @@
   ],
   "paths": {
     "/elastic/index": {
+      "get": {
+        "summary": "Get elastic field index",
+        "tags": [
+          "Elasticsearch indexing queries"
+        ],
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "description": "The elastic target field",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Index cvs fetched successfully",
+            "schema": {
+              "$ref": "#/definitions/Elastic"
+            }
+          },
+          "400": {
+            "description": "Invalid"
+          },
+          "404": {
+            "description": "Failed Could not get index cvs."
+          }
+        }
+      },
       "post": {
         "summary": "Create elastic field index",
         "tags": [
@@ -33,7 +62,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Index cvs created successfully",
+            "description": "Index created successfully",
             "schema": {
               "$ref": "#/definitions/Elastic"
             }
@@ -42,7 +71,7 @@
             "description": "Invalid"
           },
           "404": {
-            "description": "Failed. Could not create index cvs."
+            "description": "Failed. Could not create index."
           }
         }
       },
@@ -62,7 +91,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Index cvs updated successfully",
+            "description": "Index updated successfully",
             "schema": {
               "$ref": "#/definitions/Elastic"
             }
@@ -71,7 +100,7 @@
             "description": "Invalid"
           },
           "404": {
-            "description": "Failed. Elastic not found."
+            "description": "Failed. Index not found."
           }
         }
       },
@@ -91,7 +120,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Index cvs deleted successfully",
+            "description": "Index deleted successfully",
             "schema": {
               "$ref": "#/definitions/Elastic"
             }
@@ -100,16 +129,50 @@
             "description": "Invalid"
           },
           "404": {
-            "description": "Failed. Elastic not found."
+            "description": "Failed. Index not found."
           }
         }
       }
     },
     "/cv": {
+      "get": {
+        "summary": "Show CV with given id",
+        "tags": [
+          "CV queries"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "Get CV with ID",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "CV fetched successfully",
+            "schema": {
+              "$ref": "#/definitions/id"
+            }
+          },
+          "400": {
+            "description": "Invalid"
+          },
+          "404": {
+            "description": "Failed. CV not found."
+          }
+        }
+      },
       "post": {
         "summary": "Upload CV file and insert to Elastic",
         "tags": [
           "CV queries"
+        ],
+        "consumes": [
+          "multipart/form-data"
         ],
         "requestBody": {
           "description": "Upload CV",
@@ -133,7 +196,7 @@
             "description": "Invalid"
           },
           "404": {
-            "description": "Failed."
+            "description": "Failed"
           }
         }
       },
@@ -145,7 +208,7 @@
         "parameters": [
           {
             "name": "id",
-            "in": "path",
+            "in": "query",
             "description": "Delete CV with ID",
             "required": true,
             "schema": {
@@ -253,7 +316,7 @@
     "File": {
       "type": "object",
       "properties": {
-        "file": {
+        "cvs": {
           "type": "array",
           "items": {
             "type": "string",
